--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
                     </svg>
-                    教師資源雲端硬碟
+                    教師資源雲端硬碟(教師使用)
                 </h2>
-                <p class="text-gray-600 mb-4">請點擊下方連結存取教師專用資源，包含各類表單、教材與資料。</p>
+                <p class="text-gray-600 mb-4">請點擊下方連結存取教師專用資源。</p>
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="border border-gray-200 rounded-lg p-4 flex items-center">
@@ -110,7 +110,7 @@
                         </div>
                         <div>
                             <h3 class="font-medium text-gray-800">輔導費相關資料</h3>
-                            <p class="text-sm text-gray-500">收費通知單、繳費名冊、收據範本</p>
+                            <p class="text-sm text-gray-500">繳費名冊</p>
                             <button onclick="openDriveLink('fees')" class="text-blue-600 hover:text-blue-800 text-sm font-medium inline-flex items-center mt-1 bg-transparent border-0 p-0 cursor-pointer">
                                 前往下載
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -128,7 +128,7 @@
                         </div>
                         <div>
                             <h3 class="font-medium text-gray-800">學習扶助資料</h3>
-                            <p class="text-sm text-gray-500">調查表、課程表、教材資源</p>
+                            <p class="text-sm text-gray-500">調查表</p>
                             <button onclick="openDriveLink('learning')" class="text-green-600 hover:text-green-800 text-sm font-medium inline-flex items-center mt-1 bg-transparent border-0 p-0 cursor-pointer">
                                 前往下載
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
