--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                         </div>
                         <div>
                             <h3 class="font-medium text-gray-800">相關問題請洽</h3>
-                            <p class="text-gray-600">教務處教學組 朱芳萾小姐</p>
+                            <p class="text-gray-600">教務處教學組</p>
                         </div>
                     </div>
                     <div class="flex items-start">
