--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <h2 class="text-xl font-bold">114學年度暑期輔導國英數學習扶助上課調查</h2>
                         <p class="text-sm text-green-100">公告日期: 2025年7月17日</p>
                     </div>
-                    <div class="p-6 flex-grow">
+                    <div class="p-6 flex-grow flex flex-col justify-between">
                         <ul class="space-y-3 text-gray-700">
                             <li><span class="font-medium">1.</span> 參加資格：國民中學教育會考成績中，國文、英語、數學任一科目列為「待加強」得參加學習扶助課程，或由任課教師認可為需加強亦可。</li>
                             <li><span class="font-medium">2.</span> 開課時間：8/26(二)、8/27(三)、8/28(四)共3天，每天四節課 (8:10〜12:00)。</li>
@@ -87,6 +87,14 @@
                             <li><span class="font-medium">5.</span> 參加學習扶助課程同學，需自行到校，欲參加的同學請確認這三天都可以參加再報名。錄取後若臨時無法到課請務必打電話到教務處教學組請假 04-24063936#111。</li>
                             <li><span class="font-medium">6.</span> 凡全程參加同學，教務處會將上課名單轉交給開學後任課教師並給予學期課程加分，教學組會給予嘉獎乙次獎勵。</li>
                         </ul>
+                         <div class="mt-6 flex justify-end">
+                            <a href="https://campus.ctas.tc.edu.tw/f?c=8F5" target="_blank" rel="noopener noreferrer" class="inline-flex items-center px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                                    <path stroke-linecap="round" stroke-linejoin="round" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z"></path>
+                                </svg>
+                                線上報名
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -97,9 +105,9 @@
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2 text-blue-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 15a4 4 0 004 4h9a5 5 0 10-.1-9.999 5.002 5.002 0 10-9.78 2.096A4.001 4.001 0 003 15z" />
                     </svg>
-                    教師資源雲端硬碟(教師使用)
+                    教師資源雲端硬碟
                 </h2>
-                <p class="text-gray-600 mb-4">請點擊下方連結存取教師專用資源。</p>
+                <p class="text-gray-600 mb-4">請點擊下方連結存取教師專用資源，包含各類表單、教材與資料。</p>
                 
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
                     <div class="border border-gray-200 rounded-lg p-4 flex items-center">
@@ -110,7 +118,6 @@
                         </div>
                         <div>
                             <h3 class="font-medium text-gray-800">輔導費相關資料</h3>
-                            <p class="text-sm text-gray-500">繳費名冊</p>
                             <button onclick="openDriveLink('fees')" class="text-blue-600 hover:text-blue-800 text-sm font-medium inline-flex items-center mt-1 bg-transparent border-0 p-0 cursor-pointer">
                                 前往下載
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -128,7 +135,6 @@
                         </div>
                         <div>
                             <h3 class="font-medium text-gray-800">學習扶助資料</h3>
-                            <p class="text-sm text-gray-500">調查表</p>
                             <button onclick="openDriveLink('learning')" class="text-green-600 hover:text-green-800 text-sm font-medium inline-flex items-center mt-1 bg-transparent border-0 p-0 cursor-pointer">
                                 前往下載
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -157,7 +163,7 @@
                         </div>
                         <div>
                             <h3 class="font-medium text-gray-800">相關問題請洽</h3>
-                            <p class="text-gray-600">教務處教學組</p>
+                            <p class="text-gray-600">教務處教學組 </p>
                         </div>
                     </div>
                     <div class="flex items-start">
